--- a/src/App.css
+++ b/src/App.css
@@ -47,11 +47,13 @@ html,body{
 
 body{
   background-color: var(--bodyColor);
-  padding: 10px;
+  padding: .8rem
 }
 
 .main{
+  width: 100%;
   background-color: var(--mainContainerColor);
+  border-radius: 28px;
 }
 
 .main-container{
@@ -61,12 +63,11 @@ body{
   font-size: 110px;
   color: var(--fontColor);
   height: 100vh;
-
+  width: 100%;
 }
 
 .firstHeadingContainer{
   width: 100%;
-  height: 120px;
   line-height: 1.2;
   font-family: "PPeditorial-light";
   font-size: 110px;
@@ -83,11 +84,23 @@ body{
 .firstHeadingContainer .right span:nth-child(3){
   font-family: "PPeditorial-lightItalic";
 }
+.firstHeadingContainer .right span:last-child{
+  font-family: "PPeditorial-lightItalic";
+}
+.firstHeadingContainer .left span:nth-child(6){
+  font-family: "PPeditorial-lightItalic";
+}
+
+
 
 
 .firstHeadingContainer div span{
   margin-right:-4px;
   margin-top: 110px;
+}
+
+.firstHeadingContainer .right{
+  padding-right: 160px;
 }
 
 .main-container div{
@@ -113,7 +126,11 @@ body{
     padding: 0;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
+    margin-top: 120px;
+}
+
+.secondHeadingContainer .right{
+  padding: 0;
 }
 
 
@@ -135,8 +152,26 @@ body{
   justify-content: center;
 }
 
+
+.thirdHeadingContainer .right{
+  padding-right: 1.4rem;
+}
+
+.thirdHeadingContainer{
+  line-height: 0.9;
+}
+.fourthHeadingContainer{
+  line-height: 1;
+}
 .fourthHeadingContainer .right span:nth-child(2){
   padding-right: 20px;
+}
+
+.fourthHeadingContainer .left span:first-child{
+  text-transform: uppercase;
+}
+.fourthHeadingContainer .right span:nth-child(4){
+  text-transform: uppercase;
 } 
 .secondHeadingContainer,.thirdHeadingContainer,.fourthHeadingContainer{
   font-family: "PPmontreal-reg";
@@ -151,6 +186,9 @@ body{
 .fourthHeadingContainer div span{
   margin-right: -6px;
 }
+
+
+
 /* card styling */
 
 .card{
