--- a/src/App.css
+++ b/src/App.css
@@ -280,12 +280,22 @@ body{
   font-family: "PPmontreal-Reg";
   font-size: 110px;
   font-weight: 400;
+  height: 400px;
   letter-spacing: -4px;
   color: var(--fontColor);
+  /* margin-top: 100px; */
+}
+
+.work-section span{
+  display: inline-block;
+  margin-top: 110px;
 }
 .work-section div{
+  width: 100%;
   line-height: 1;
   border-bottom: 1px solid var(--fontColor);
+  height: 110px;
+  overflow: hidden;
 }
 
 .work-section div:nth-child(2){
@@ -293,8 +303,11 @@ body{
   justify-content: right;
   padding: 0 20px;
 }
+
+
 .work-section div:nth-child(3){
   display: flex;
   justify-content: center;
-  /* padding: 0 20px; */
+  padding: 0 20px;
 }
+ 
