--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,8 @@ html,body{
 }
 
 
+
+
 body{
   background-color: var(--bodyColor);
   padding: .8rem
@@ -63,11 +65,13 @@ body{
   width: 100%;
   background-color: var(--mainContainerColor);
   border-radius: 28px;
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
 }
 
 .main-container{
-  padding-left: 1.6rem;
-  padding-right: 1.6rem;
+  /* padding-left: 1.6rem;
+  padding-right: 1.6rem; */
   padding-top: 0.5rem;
   font-family: "PPeditorial-light";
   font-size: 110px;
@@ -289,7 +293,6 @@ body{
   height: 400px;
   letter-spacing: -4px;
   color: var(--fontColor);
-  /* margin-top: 100px; */
 }
 
 .work-section span{
@@ -320,9 +323,9 @@ body{
 
 
 .project-section{
-  display: flex;
-  width: 100%;
-  background-color: orange;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns:1fr 1fr 1fr 1fr 1fr;
 }
 
 .pr-card{
@@ -334,3 +337,50 @@ body{
   padding: 2rem;
   border-bottom-right-radius: 1rem;
 }
+
+
+/* start from first col and takes two columns */
+.span-col-1-2{
+  grid-column: 1/3;
+}
+
+/* start from third col and takes two columns */
+.span-col-3-2{
+  grid-column: 3/5;
+}
+
+
+/* start from first col and takes three columns */
+.span-col-1-3{
+  grid-column: 1/4;
+}
+
+/* start from fourth col and takes two columns */
+.span-col-4-2{
+  grid-column: 4/6;
+}
+
+.span-col-3-3{
+  grid-column: 3/6;
+}
+
+.span-col-2-2{
+  grid-column: 2/4;
+}
+
+
+
+
+/* MOUSE FOLLOWEE */
+
+.mouse-follower{
+  
+}
+
+
+
+
+
+
+
+
