--- a/src/App.css
+++ b/src/App.css
@@ -65,8 +65,6 @@ body{
   width: 100%;
   background-color: var(--mainContainerColor);
   border-radius: 28px;
-  padding-left: 1.6rem;
-  padding-right: 1.6rem;
   overflow: hidden;
 }
 
@@ -77,6 +75,8 @@ body{
   color: var(--fontColor);
   /* height: 100vh; */
   width: 100%;
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
 }
 .main-container div{
   height: 110px;
@@ -238,6 +238,8 @@ body{
   color: var(--secondFontColor);
   font-weight: 400;
   font-size: 16px;
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
 }
 
 .about-section .leftInfo{
@@ -291,6 +293,8 @@ body{
   height: 400px;
   letter-spacing: -4px;
   color: var(--fontColor);
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
 }
 
 .work-section span{
@@ -321,9 +325,13 @@ body{
 
 
 .project-section{
+  width: 100%;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+  padding-bottom: 10.5rem;
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
 }
 
 .pr-card{
@@ -337,26 +345,41 @@ body{
   position: relative;
   overflow: hidden;
 } 
-
-.top-section,.bottom-section{
+.bottom-section{
+  overflow: hidden;
+  /* background-color: #fff; */
+}
+.top-section{
   display: flex;
   justify-content: space-between;
+
+}
+.bottom-section div{
+  font-family: "PPmontreal-Reg";
+  font-weight: 500;
+  font-size: 2rem;
+  display: flex;
+  justify-content: space-between;
+
 }
 
 .pr-card .pr-hidden-text{
-  position: absolute;
-  bottom: 1rem;
-  /* top: 80%; */
+  /* width: 100%; */
   height: 250px;
-  padding: 0;
-  margin: 0;
   display: flex;
   align-items: center;
-  overflow: hidden; 
-
+  position: absolute;
+  left: 0;
+  bottom: 1rem;
+  padding: 5px;
+  margin: 10px;
+  /* background-color: lightcoral; */
+  overflow: hidden;
+  gap: 20px;
 }
 
 .pr-hidden-text div{
+  /* background-color: yellow; */
   text-transform: "lowercase";
   font-family: "PPmontreal-reg";
   font-weight: 400;
@@ -364,18 +387,16 @@ body{
   align-items: center;
   justify-content: center;
   height: 100%;
-  /* width: fit-content; */
+  width: fit-content;
   position: relative;
-  top: 100%;
-  transform: rotate(10deg);
-  flex-shrink: 0;
+  left: 0;
   font-size: 231px;
   cursor: pointer;
+  transform: translateY(100%);
+  /* flex-shrink: 0; */
 
 }
 
-/* .pr-hidden-text div::after{
-} */
 
 /* start from first col and takes two columns */
 .span-col-1-2{
@@ -428,8 +449,22 @@ body{
 
 
 
+/* socials section */
+.socials{
+  width: 100%;
+  background-color: #3F3B37;
+
+}
 
 
+.socials .content{
+  /* background-color: rebeccapurple; */
+  font-size: 44px;
+  font-family: "PPmontreal-reg";
+  font-weight: 400;
+  color: #FBEFDF;
+  padding: 50px 150px;
+}
 
 
 
